Finalized data returned from search/college.js search, college.js so it may be required as a module (it returns a function that returns the request to the college website). Added a data folder for output data, language list from the college website dropdown select, and a list of every municipality in BC to be used in the future. Began work on the search routine to get ratings on WebMD in the file search/ratemymd.js

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.5",
     "express": "^4.14.1",
+    "humanparser": "^1.1.1",
     "jsdom": "^9.12.0",
     "morgan": "^1.7.0",
     "pg": "^6.1.2",
