--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.16.0",
     "cheerio": "^0.22.0",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.3",
     "ejs": "^2.5.5",
     "express": "^4.14.1",
     "fs-promise": "^2.0.2",
