Cleaned up unneeded files in data, views directories. Created scripts in the jobs directory: 1) initDoctorData.js - initialize data files doctorData.txt & doctorData.js, 2)seedDoctorData.js - loads data from a new file ./data/doctorSeedData.js that contains pre-scraped data to populate the database with when first cloning the repo. The seed data was initially contained in doctorData.txt, but I didn't want it accidentally erased or altered during a scraping job. This way the doctorData(.txt/.js) files can be used as data buffers before committing scraped data to the database in the future.

--- a/config/env.js.example
+++ b/config/env.js.example
@@ -1,6 +1,11 @@
-// requiring this file like so:
+// Requiring this file like so:
+//
 //      const env = require('./config/env');
 //
 // will run the file, setting all environment variables.
+//
+// Make a copy of this file in this directory, and rename it 'env.js'
 
 process.env['NODE_ENV'] = 'development';
+process.env['PGUSER'] = 'username';
+process.env['PGPASSWORD'] = 'password';
